# SCF-Scratch_Code_Fock

./: .gitignore  CHANGELOG.md  DERIVATIONS.md  README.md  SUPPLEMENTS.md  full_pipeline.ipynb  full_pipeline.py  integral_solvers.py  matrix_builders.py  pipeline_output.txt  pyproject.toml  roothan_solver.py
notebooks/: OS_integrals.ipynb  Reader_n_basisset.ipynb  Roothan_solver.ipynb
src/scratch_code_fock/: integral_solvers.py  matrix_builders.py  mol_basis_builder.py  roothan_solver.py
